assets/css/main.css
html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 1em;
    font: inherit;
    vertical-align: baseline
}

a {
    text-decoration: none
}

article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
    display: block
}

body {
    line-height: 1
}

table {
    border-collapse: collapse;
    border-spacing: 0
}

body {
    color: #272727;
    background: #fff;
    font-family: 'Titillium Web', sans-serif;
    font-size: 100%;
    font-weight: 400
}

h1 {
    margin-bottom: 5px;
    font-family: 'Merriweather', sans-serif
}

p {
    font-size: 1em;
    line-height: 115%;
    padding-top: 5px;
    padding-bottom: 5px
}

a {
    color: #1A0DAB;
    text-decoration: none
}

a:visited {
    color: #1A0DAB;
    text-decoration: none
}

a:hover {
    background-color: #eee;
    text-decoration: none
}

a:active {
    color: #1A0DAB;
    text-decoration: none
}

ul {
    list-style: none
}

ul li {
    line-height: 115%;
    padding: 5px;
    padding-left: 15px
}

@media screen and (max-width: 600px) {
    ul li {
        padding: 10px 0 10px 0
    }
}

ol {
    padding-left: 25px;
    margin-bottom: 15px
}

ol li {
    line-height: 115%;
    padding: 5px
}

@media screen and (max-width: 600px) {
    ol li {
        padding: 10px 0 10px 0
    }
}

blockquote {
    color: #777;
    border-left: 3px solid #777;
    padding-left: 15px;
    font-size: 18px;
    letter-spacing: -1px;
    font-style: italic
}

img {
    max-width: 100%;
    max-height: 100%;
    display: block;
    margin-left: auto;
    margin-right: auto
}

hr {
    width: 25%;
    margin-top: 25px;
    margin-bottom: 25px
}

strong {
    font-weight: 700
}

em {
    font-style: italic
}

p.indent {
    margin-left: 15px
}

.wrapper {
    max-width: 600px;
    margin: auto;
    padding: 60px 30px 60px 30px;
}

@media screen and (max-width: 600px) {
    .wrapper {
        padding: 20px
    }
}

img+em {
    display: block;
    text-align: center
}

.header {
    display: flex;
    justify-content: space-between;
    align-items: baseline;
    padding-bottom: 30px;
}

@media screen and (max-width: 600px) {
    .header {
        display: block
    }
}

.header h1 {
    font-size: 2em;
    margin-bottom: 0
}

.header ul {
    margin-top: 10px
}

.header ul li {
    display: inline;
    padding: 0;
    padding-left: 5px
}

.blog {
    padding-bottom: 30px
}

.blog h1 {
    font-size: 1.4em;
    margin-bottom: 15px
}

.blog h2 {
    font-family: 'Merriweather', sans-serif;
    font-size: 1.0em;
    margin-bottom: 5px
}

.next {
    text-align: right
}

.music {
    padding-bottom: 30px
}

.music h1 {
    font-size: 1.4em;
    margin-bottom: 5px
}

.music a {
    padding: 5px;
    padding-left: 10px
}

.all h1 {
    margin-bottom: 30px
}

.all h2 {
    font-size: 1.2em;
    font-family: 'Merriweather', sans-serif;
    line-height: 115%;
    padding-top: 5px;
    padding-bottom: 5px
}

.all p {
    line-height: 115%
}

.all .date {
    font-style: italic
}

.intro {
    padding-bottom: 30px
}

.intro ul {
    list-style: circle;
    margin-left: 35px;
    padding: 7px
}

.intro li {
    line-height: 100%;
    padding-left: 0px
}

.intro a {
    text-decoration: underline
}

.posts h1 {
    font-size: 1.4em;
    margin-top: 30px
}

.posts p {
    padding-top: 6px;
    padding-bottom: 6px
}

.post {
    padding-bottom: 30px
}

.post__title {
    display: block;
    margin-top: 20px;
    margin-bottom: 6px
}

.post__title h1 {
    display: inline-block;
    font-size: 1.7em;
    font-weight: 700;
    padding-right: 10px;
    padding-bottom: 2px;
    text-decoration: none
}

.post__date p {
    font-size: 1em;
    font-style: italic
}

.post__content {
    padding-top: 10px
}

.post__content h1 {
    font-size: 1.4em;
    font-weight: 700;
    margin-top: 50px;
    margin-bottom: 10px
}

.post__content h2 {
    font-size: 1.3em;
    font-weight: 700;
    margin-top: 25px;
    margin-bottom: 5px
}

.post__content h3 {
    font-size: 1.1em;
    font-weight: 700;
    margin-top: 25px;
    margin-bottom: 5px
}

.post__content p {
    font-size: 1em;
    line-height: 150%;
    margin-bottom: 15px
}

.post__content a:hover {
    border-bottom: 1px solid #1A0DAB;
    background-color: transparent;
    text-decoration: none
}

.post__content strong {
    font-weight: 700
}

.post__content em {
    font-style: italic
}

.post__content ul {
    font-size: 1em;
    list-style: circle;
    margin-left: 30px;
    margin-bottom: 20px;
}

.post__content ul li {
    padding-top: 10px;
    padding-left: 5px
}

@media screen and (max-width: 600px) {
    .post__content ul li {
        padding: 10px 0 10px 0
    }
}

@media screen and (max-width: 600px) {
    .post__content ul {
        margin-left: 10px
    }
}

.post__content img {
    margin-top: 10px;
    margin-bottom: 10px
}

@media screen and (max-width: 600px) {
    .post__content img {
        width: 100%;
        margin: auto
    }
}

.post__content code {
    padding: 3px;
    font-size: 0.9em;
    border-radius: 3px;
    background: #eee
}

.post__content .highlight {
    margin: 10px;
    margin-bottom: 15px;
    padding: 10px;
    line-height: 1.5;
    border-radius: 3px;
    background: #272727;
    overflow-y: auto
}

.post__content .highlight code {
    color: lime;
    background: none
}

.post__content .codebreak {
    margin: 15px;
    border: 0;
    border-bottom: 1px dashed #272727
}

.recent {
    padding-top: 0px
}

.about__title {
    font-size: 1.6em;
    font-weight: 700;
    margin-top: 20px;
    margin-bottom: 10px
}

.about__content {
    margin-top: 20px
}

.about__content h1 {
    font-size: 1.2em;
    font-style: italic;
    margin-top: 30px;
    margin-bottom: 5px
}

.about__content p {
    font-size: 1em;
    line-height: 150%;
    margin-bottom: 10px
}

.footer {
    margin-top: 35px;
    margin-bottom: 35px
}

.footer hr {
    margin-bottom: 15px
}

